// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`slice 3.1: responsive split layout at width >= 160 snapshot: split layout at 200x24, truecolor light 1`] = `
"                                                                                                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                                                                                                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                                                                                                        
 ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                                                                    
 │ Lunch at Zomato Bangalore                                                                                                       │  [llm:gpt-4]   →   food  [92%]                                     
 ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                                                                    
  █ Uber ride to airport                                                                                                                                                                                
  ▆ Amazon order #12345                                                                                                               1 food >                                                          
  ▄ Netflix monthly                                                                                                                   2 travel                                                          
  █ Salary credit October                                                                                                             3 other                                                           
  █ Rent transfer to landlord                                                                                                                                                                           
  ▇ Coffee at Blue Tokai                                                                                                                                                                                
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note                                                                                       [gd] doc ┊[Q] queues ┊[:] palette ┊[t] stats ┊[?] help  
                                                                                                                                                                                                        
"
`;

exports[`slice 3.1: responsive split layout at width >= 160 snapshot: split layout at 200x24, 256-color light 1`] = `
"                                                                                                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                                                                                                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                                                                                                        
 ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                                                                    
 │ Lunch at Zomato Bangalore                                                                                                       │  [llm:gpt-4]   →   food  [92%]                                     
 ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                                                                    
  █ Uber ride to airport                                                                                                                                                                                
  ▆ Amazon order #12345                                                                                                               1 food >                                                          
  ▄ Netflix monthly                                                                                                                   2 travel                                                          
  █ Salary credit October                                                                                                             3 other                                                           
  █ Rent transfer to landlord                                                                                                                                                                           
  ▇ Coffee at Blue Tokai                                                                                                                                                                                
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note                                                                                       [gd] doc ┊[Q] queues ┊[:] palette ┊[t] stats ┊[?] help  
                                                                                                                                                                                                        
"
`;

exports[`slice 3.1: responsive split layout at width >= 160 snapshot: split layout at 200x24, 16-color light (markers) 1`] = `
"                                                                                                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                                                                                                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                                                                                                        
 ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                                                                    
 │ ▶ Lunch at Zomato Bangalore                                                                                                     │  [llm:gpt-4]   →   food  [92%]                                     
 └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                                                                    
  █ Uber ride to airport                                                                                                                                                                                
  ▆ Amazon order #12345                                                                                                               1 food >                                                          
  ▄ Netflix monthly                                                                                                                   2 travel                                                          
  █ Salary credit October                                                                                                             3 other                                                           
  █ Rent transfer to landlord                                                                                                                                                                           
  ▇ Coffee at Blue Tokai                                                                                                                                                                                
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note                                                                                       [gd] doc ┊[Q] queues ┊[:] palette ┊[t] stats ┊[?] help  
                                                                                                                                                                                                        
"
`;

exports[`slice 3.1: responsive split layout at width >= 160 snapshot: split layout at 200x24, truecolor dark 1`] = `
"                                                                                                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                                                                                                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                                                                                                        
 ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                                                                    
 │ Lunch at Zomato Bangalore                                                                                                       │  [llm:gpt-4]   →   food  [92%]                                     
 ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                                                                    
  █ Uber ride to airport                                                                                                                                                                                
  ▆ Amazon order #12345                                                                                                               1 food >                                                          
  ▄ Netflix monthly                                                                                                                   2 travel                                                          
  █ Salary credit October                                                                                                             3 other                                                           
  █ Rent transfer to landlord                                                                                                                                                                           
  ▇ Coffee at Blue Tokai                                                                                                                                                                                
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note                                                                                       [gd] doc ┊[Q] queues ┊[:] palette ┊[t] stats ┊[?] help  
                                                                                                                                                                                                        
"
`;
